# Cuby_Firmware

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Makefile  README.md
components/api/: CMakeLists.txt  api.cpp
components/api/include/: api.h
components/drivers/oled/: CMakeLists.txt  oled.c  oled.cpp  u8g2_esp32_hal.c  u8g2_esp32_hal.h
components/drivers/oled/include/: oled.h
components/motors/: CMakeLists.txt  motors.c  motors.cpp
components/motors/include/: motors.h
components/ota/: CMakeLists.txt  ota.cpp
components/ota/include/: ota.h
components/power/: CMakeLists.txt
components/sensors/: CMakeLists.txt  sensors.cpp
components/sensors/include/: sensors.h
components/server/: CMakeLists.txt  server.cpp
components/server/include/: server.h
components/ui/: CMakeLists.txt  Touch.cpp  TouchPad.cpp  touch.cpp  ui.cpp
components/ui/include/: Touch.h  touch.h  touchpad.h  ui.h
components/wifi/: CMakeLists.txt  wifi.c  wifi.cpp
main/: CMakeLists.txt  Kconfig.projbuild  cuby.c  cuby.cpp
server_certs/: ca_cert.pem
